# mini-mancer

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  COMPREHENSIVE_CODE_ANALYSIS.md  DESIGN.md  Dockerfile  EMERGENCY_OBSERVABILITY_REPORT.md  IMPLEMENTATION.md  INTEGRATION_RISKS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  RATE_LIMITER_INTEGRATION_SUMMARY.md  README.md  RELEASE_NOTES.md  REWRITE.md  SYSTEM_PROMPT_V1.md  docker-compose.yaml  llms-telegram-bot-api.txt  main.py  mini-mancer-pitch.html  pyproject.toml  test_adaptive_rate_limiter_demo.py  test_bot_as_user.py  test_bot_commands.py  test_created_bot.py  test_framework_demo.py  test_rate_limiter_integration.py  test_report.md
bootstrap/: .env.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  create_new_botmother.py  demonstrate_command_fixes.py  docker-compose.yaml  main.py  pyproject.toml  start_botmother.py  test_command_registration.py  test_echo_bot_functionality.py  test_error_handling.py  test_existing_echo_bot.py  test_final_integration.py  test_fixed_authentication.py  test_live_botmother.py  test_live_bots.py  test_manual_bot_creation.py  test_markdown_fix.py  test_new_bot_commands.py  test_unlimited_creation.py  update_bot_commands.py  web_main.py
bootstrap/docs/: manual_botfather_steps.md
bootstrap/src/: agno_core.py  bot_creation_tools.py  bot_registry.py  bot_spawner.py  botfather_integration.py  botmother_manager.py  constants.py  event_loop_monitor.py  markdown_utils.py  simple_botmother.py  simple_botmother_models.py  simple_botmother_templates.py  simple_echo_bot.py  telegram_bot_base.py  telethon_client.py  unlimited_bot_creator.py
bootstrap/tests/: test_agno_simple.py  test_botmother_manager.py  test_phase1.py  test_phase1_simple.py  test_real_bot.py  test_sessions.py  test_simple_botmother.py
bootstrap/tools/: configure_new_botmother.py  debug_botmother.py  discover_bot_tokens.py  get_botfather_response.py  list_botfather_bots.py
scripts/: format.sh  health_check.py  stress_test_event_loops.py
src/: __init__.py  agent_controller.py  api_models.py  api_router.py  bot_compilation_pipeline.py  botmother_system_prompt.py  models.py  platform_client.py  proto_spawner.py  prototype_agent.py  telegram_channel_manager.py  telegram_client.py  telegram_integration.py  telegram_rate_limiter.py  test_monitor.py  token_pool_manager.py
src/agents/: __init__.py  telegram_bot_template.py
src/constants/: __init__.py  user_messages.py
src/factory/: __init__.py  assistance_handler.py  bot_factory_agent.py  openserv_client.py
src/models/: __init__.py  agent_dna.py  bot_requirements.py
src/prompts/: botmother_prompts.py
src/tools/: thinking_tool.py
src/utils/: __init__.py  telegram_error_handler.py
tests/: README.md  conftest.py  pytest.ini  run_comprehensive_tests.py  test_created_bots.py  test_factory_bot.py  test_integration.py  test_performance.py  test_rate_limiter.py  test_tier1_critical_functionality.py  test_tier2_user_experience.py  test_tier3_performance_reliability.py  test_tier4_integration_advanced.py  test_tier5_comprehensive_coverage.py  test_utils.py
