[project]
name = "mini-mancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=0.5.50",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
